HotelOrTaxi/assets/css/style-3.css
/* ... */
.btn:first-child {
}
button.btn, input.btn[type="submit"] {
}

.btn-holder { margin:0 auto; width:95%; /* IE10 Consumer Preview */ background-image: -ms-linear-gradient(top, #D70000 0%, #F10000 100%); /* Mozilla Firefox */  background-image: -moz-linear-gradient(top, #D70000 0%, #F10000 100%); /* Opera */ background-image: -o-linear-gradient(top, #D70000 0%, #F10000 100%); /* Webkit (Safari/Chrome 10) */ background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #D70000), color-stop(1, #F10000)); /* Webkit (Chrome 11+) */ background-image: -webkit-linear-gradient(top, #D70000 0%, #F10000 100%); /* W3C Markup, IE10 Release Preview */ background-image: linear-gradient(to bottom, #D70000 0%, #F10000 100%); border:4px solid #FFF; border-radius:6px; box-shadow:0 0 4px #000000; }
.btn-fight { margin:0 auto; width:196px; height:80px; background:url(/assets/img/fight-button-text.png) no-repeat 6px 20px; cursor: pointer; border:none; }
 
.control-group { text-align:center; }
	 
form { margin: 0 0 0px; }

.navbar .brand { padding: 5px 20px; }

.steps-numbers p { font-style:italic; }

/* PROMOTION HEADER - NEEDS CHANGING */

.photo-set1 { background-image:url(/assets/img/people/abi.png); }
.photo-set2 { background-image:url(/assets/img/people/adam.png); }
.photo-set3 { background-image:url(/assets/img/people/alex.png); }
.photo-set4 { background-image:url(/assets/img/people/andy.png); }
.photo-set5 { background-image:url(/assets/img/people/ella.png); }
.photo-set6 { background-image:url(/assets/img/people/gemma.png); }
.photo-set7 { background-image:url(/assets/img/people/jane.png); }
.photo-set8 { background-image:url(/assets/img/people/martin.png); }
.photo-set9 { background-image:url(/assets/img/people/pete.png); }
.photo-set10 { background-image:url(/assets/img/people/richard.png); }
.photo-set11 { background-image:url(/assets/img/people/rob.png); }
.photo-set12 { background-image:url(/assets/img/people/sam.png); }


.navbar-inverse .nav .active > a, .navbar-inverse .nav .active > a:hover, .navbar-inverse .nav .active > a:focus {
    background-color: #810026;
    color: #FFFFFF;
}
.navbar-inverse .btn-navbar {
    background-color: #810026;
    color: #FFFFFF;
    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
}



element.style {
    margin: 0 auto;
    width: 340px;
}

.btn:first-child {
}
.navbar-inverse .btn-navbar { color: #FFFFFF; text-shadow:0 -1px 0 rgba(0, 0, 0, 0.25); background-color: #810026; }

.navbar-inverse .btn-navbar { color: #FFFFFF; text-shadow:0 -1px 0 rgba(0, 0, 0, 0.25); background-color: red; background-image: linear-gradient(to bottom, #CF0000, #FF0000); background-repeat: repeat-x; border-color:none; }

.arrow-down-bottom { width: 100%; height: 40px; }
.arrow-down-bottom-img { margin:0 auto; width:49px; height:20px; background:url("../../../assets/img/arrow-down.png") no-repeat 0 0; }

a.taxi-company { text-decoration:none; }
.taxi-near-you-holder { position:relative; margin:20px 0; padding:6px 5px; background:#FFF; border-radius:4px 4px 4px 4px; }
.taxi-near-you-holder h2 { font-size:28px; line-height:1em; text-align:center; color:#000; }
.taxi-comp-holder { position:relative; margin-bottom:20px; padding:3px 10px 10px 10px; font-size:17px; font-weight:bold; color:#FFF; text-align:center; background-color:#3a3a42; border:4px solid #FFF; border-radius: 4px 4px 4px 4px; box-shadow:0 0 5px #9a9a9a; }
.taxi-name-holder { padding:5px; width:100%; }
.taxi-phone-no { padding:5px 0; width:100%; font-size:21px; font-weight:bold; color:#000; text-shadow:0 0 5px #FFF; border:2px solid #dadada; border-radius:100px 100px 5px 5px; background-color:rgb(255, 143, 0); box-shadow:0 0 5px #000 inset; }


@media (min-width: 1200px){
	.container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container {
	width: 940px;
	}

    .hero-unit {
      float: left;
      width: 470px;
    }

    .arrow-down-bottom {
        display:none;
    }
}

@media (max-width: 979px){
	.navbar-fixed-top {
	  margin-bottom:0px;
	}

}
footer {
	clear:both;
}

/* OVERWRITE bootstrap-responsive.css */

#sublogo {
    background: url("../../../assets/img/bubbles-hotel-vs-taxi.png") no-repeat scroll right center transparent;
    margin: 15px 0;
    width: 520px;
}

#sublogo h1 {
    margin: 0;
    padding: 0;
}

#moreinfo { 
	float:left;
	width:380px;
	margin-left:50px;
	margin-top:50px;
 }
p.one { float:left; padding:10px 0 0 20px; width:240px; vertical-align:baseline; }
p.two { float:left; padding:10px 0 0 5px; width:304px; vertical-align:baseline; }
 
 .citation {
	width:290px;
	margin-left:10px;
 }
 
 #content { 
    padding:20px 0 0;
	clear:both;
	text-align:center;
 }
 
.navbar-inner {
	 padding:0;
}

.headerIMG {
	margin:0 auto;
}
 
 
@media (max-width: 710px) {
 
  #logo { display:block }
  #sublogo, .citation  { display:none }
  .hero-unit{ width:100%; }
	 
  #moreinfo { clear:both; float:none; margin:0 auto;  font-size:1.2em; }
  #moreinfo { width:279px; }

  p.one { padding:10px 0 0 10px; width:192px; font-size:14px; }
  p.two { width:207px; font-size:14px; }

  .results-box-img { margin-right:15px; }
  .subheadline { float:left; width:40%; margin:10px 0 0 0; font-size:13px; }
  .price { float:left; width:45%; font-size:32px; font-weight:bold; }
  
  .show-me-holder { float: left; margin: 20px 0 0; width: auto; }

  .red-button {  margin-top:0;font-size: 16px;float: left;width: 100px;  }
  .red-button:hover { color:white; text-decoration:none; }

    
}
/* ... */

